--- a/Occasion.vbproj
+++ b/Occasion.vbproj
@@ -14,6 +14,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -54,6 +55,9 @@
     <Reference Include="Google.Protobuf, Version=3.32.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>packages\Google.Protobuf.3.32.0\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
+    <Reference Include="Guna.UI2, Version=2.0.4.7, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
+      <HintPath>packages\Guna.UI2.WinForms.2.0.4.7\lib\net472\Guna.UI2.dll</HintPath>
+    </Reference>
     <Reference Include="K4os.Compression.LZ4, Version=1.3.8.0, Culture=neutral, PublicKeyToken=2186fa9121ef231d, processorArchitecture=MSIL">
       <HintPath>packages\K4os.Compression.LZ4.1.3.8\lib\net462\K4os.Compression.LZ4.dll</HintPath>
     </Reference>
@@ -79,6 +83,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Pipelines, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.IO.Pipelines.5.0.2\lib\net461\System.IO.Pipelines.dll</HintPath>
@@ -98,6 +103,7 @@
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -122,30 +128,25 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="adminForm.Designer.vb">
-      <DependentUpon>adminForm.vb</DependentUpon>
+    <Compile Include="Module\DatabaseConnection.vb" />
+    <Compile Include="New Forms\EditReservationForm.Designer.vb">
+      <DependentUpon>EditReservationForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="adminForm.vb">
+    <Compile Include="New Forms\EditReservationForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DatabaseConnection.vb" />
-    <Compile Include="editReservationForm.Designer.vb">
-      <DependentUpon>editReservationForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="editReservationForm.vb">
+    <Compile Include="New Forms\LoginForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="New Forms\LoginForm.Designer.vb">
+      <DependentUpon>LoginForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -157,40 +158,43 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="placeReservationForm.Designer.vb">
-      <DependentUpon>placeReservationForm.vb</DependentUpon>
+    <Compile Include="New Forms\MainForm.Designer.vb">
+      <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="placeReservationForm.vb">
+    <Compile Include="New Forms\MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="placeReservationForm2.Designer.vb">
-      <DependentUpon>placeReservationForm2.vb</DependentUpon>
+    <Compile Include="New Forms\ReservationForm.Designer.vb">
+      <DependentUpon>ReservationForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="placeReservationForm2.vb">
+    <Compile Include="New Forms\ReservationForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="staffForm.Designer.vb">
-      <DependentUpon>staffForm.vb</DependentUpon>
+    <Compile Include="UserControls\DashboardControl.Designer.vb">
+      <DependentUpon>DashboardControl.vb</DependentUpon>
     </Compile>
-    <Compile Include="staffForm.vb">
-      <SubType>Form</SubType>
+    <Compile Include="UserControls\DashboardControl.vb">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="viewReservationForm.Designer.vb">
-      <DependentUpon>viewReservationForm.vb</DependentUpon>
+    <Compile Include="UserControls\ReservationControl.Designer.vb">
+      <DependentUpon>ReservationControl.vb</DependentUpon>
     </Compile>
-    <Compile Include="viewReservationForm.vb">
-      <SubType>Form</SubType>
+    <Compile Include="UserControls\ReservationControl.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\ViewReservationControl.Designer.vb">
+      <DependentUpon>ViewReservationControl.vb</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ViewReservationControl.vb">
+      <SubType>UserControl</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="adminForm.resx">
-      <DependentUpon>adminForm.vb</DependentUpon>
+    <EmbeddedResource Include="New Forms\EditReservationForm.resx">
+      <DependentUpon>EditReservationForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="editReservationForm.resx">
-      <DependentUpon>editReservationForm.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="New Forms\LoginForm.resx">
+      <DependentUpon>LoginForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -198,17 +202,20 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="placeReservationForm.resx">
-      <DependentUpon>placeReservationForm.vb</DependentUpon>
+    <EmbeddedResource Include="New Forms\MainForm.resx">
+      <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="placeReservationForm2.resx">
-      <DependentUpon>placeReservationForm2.vb</DependentUpon>
+    <EmbeddedResource Include="New Forms\ReservationForm.resx">
+      <DependentUpon>ReservationForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="staffForm.resx">
-      <DependentUpon>staffForm.vb</DependentUpon>
+    <EmbeddedResource Include="UserControls\DashboardControl.resx">
+      <DependentUpon>DashboardControl.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="viewReservationForm.resx">
-      <DependentUpon>viewReservationForm.vb</DependentUpon>
+    <EmbeddedResource Include="UserControls\ReservationControl.resx">
+      <DependentUpon>ReservationControl.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\ViewReservationControl.resx">
+      <DependentUpon>ViewReservationControl.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
